--- a/src/containers/app/scss/style.css
+++ b/src/containers/app/scss/style.css
@@ -136,14 +136,16 @@ input[type="number"] {
             color: #333333;
             font-family: "Roboto-Regular";
             font-size: 24px;
-            margin-right: 30px; }
+            margin-right: 30px;
+            min-width: 70px; }
           .site-content .page-content .page-body .card.asset-portfolio .full-box .full-box-item.coin .coin-data .coin-name {
             color: #777777;
             font-family: "Roboto-Regular";
             font-size: 12px;
             line-height: 14px; }
           .site-content .page-content .page-body .card.asset-portfolio .full-box .full-box-item.coin .coin-data .more {
-            height: 30px; }
+            height: 30px;
+            margin: auto 0 auto auto; }
             .site-content .page-content .page-body .card.asset-portfolio .full-box .full-box-item.coin .coin-data .more i {
               color: #BBBBBB;
               font-size: 30px; }
